--- a/server/basic-test/build.gradle
+++ b/server/basic-test/build.gradle
@@ -3,7 +3,7 @@
 dependencies {
     implementation("$boot:spring-boot-starter-web")
     implementation("$boot:spring-boot-starter-thymeleaf")
-    implementation("org.thymeleaf.extras:thymeleaf-extras-springsecurity5")
+    implementation('org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE')
 //    implementation("nz.net.ultraq.thymleaf:thymeleaf-layout-dialect")
 }
 
