프로젝트 분할하여 초기 셋팅
기존에 web과 관련한 패키지는 새로운 web 패키지로 옮깁니다. 필터 설정이
있는 디렉토리에서 web 프로젝트를 컴파일하는 의존성 설정을 통해
프로젝트를 분할하여 초기 셋팅을 합니다. 또한 모바일 필터를 지원하는
프로젝트까지 총 3개의 프로젝트를 만듭니다

--- a/server/login-multi-chain/src/main/resources/application.yml
+++ b/server/login-multi-chain/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 9054
+
+spring:
+  tymeleaf:
+    prefix: classpath:/templates/
+    cache: false
+    check-template-location: true
