--- a/server/login-custom-filter/src/main/resources/application.yml
+++ b/server/login-custom-filter/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 9052
+
+spring:
+  tymeleaf:
+    prefix: classpath:/templates/
+    cache: false
+    check-template-location: true
