--- a/server/login-basic/build.gradle
+++ b/server/login-basic/build.gradle
@@ -1,9 +1,9 @@
-
-
 dependencies {
     implementation("$boot:spring-boot-starter-web")
     implementation("$boot:spring-boot-starter-thymeleaf")
     implementation('org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE')
 //    implementation("nz.net.ultraq.thymleaf:thymeleaf-layout-dialect")
+
+    compile project(":web-user-admin")
 }
 
