인증필터 저장소 설정 수정
기존에는 인메모리 방식에서 설정한 계정을 사용하도록 하였지만,
UserDetailsService를 이용해서 계정을 불러오도록 개선합니다

--- a/server/login-userdetails/build.gradle
+++ b/server/login-userdetails/build.gradle
@@ -1,6 +1,8 @@
 apply from: "../web-common.gradle"
 
 dependencies {
+    implementation("$boot:spring-boot-starter-data-jpa")
+    runtime("com.h2database:h2")
     compile project(":web-user-admin")
     compile project(":comp-user-admin")
 }
