--- a/server/login-userdetails/src/main/resources/application.yml
+++ b/server/login-userdetails/src/main/resources/application.yml
@@ -11,4 +11,4 @@ spring:
   tymeleaf:
     prefix: classpath:/templates/
     cache: false
-    check-template-location: t
+    check-template-location: true
