초기 츠로젝트 셋팅 추가
테스트용 프로젝트와 권한 확인용 프로젝트 2개를 생성합니다

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,7 @@
 
 rootProject.name = 'security-fastcampus'
 
-["comp", "web", "server"].each {
+["comp", "web", "server", "test"].each {
 
     def compDir = new File(rootDir, it)
     if(!compDir.exists()){
