--- a/server/authority-test/build.gradle
+++ b/server/authority-test/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
     implementation("$boot:spring-boot-starter-web")
 
-    //testCompile project(":test-web-util")
+    testCompile project(":test-web-util")
 }
