accessDecisionManager 커스터마이징
권한 인증을 커스터마이징할 수 있도록 구현을 추가합니다. 모든 경로에 대해
검사하며 통과하게 합니다

--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ subprojects {
 }
 
 
-["comp", "web"].each {
+["comp", "web", "test"].each {
     def subProjectDir = new File(projectDir, it)
     subProjectDir.eachDir {dir->
         def projectName = ":${it}-${dir.name}"
