acl 테스트를 추가하라
기존 캐시설정을 제거하고 acl 설정을 완료한 후에 테스트를 추가합니다

--- a/server/authority-acl/src/main/resources/application.yml
+++ b/server/authority-acl/src/main/resources/application.yml
@@ -20,6 +20,6 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     generate-ddl: true
     show-sql: true
