--- a/comp/user-admin/build.gradle
+++ b/comp/user-admin/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation("$boot:spring-boot-starter-data-jpa")
+    implementation("$boot:spring-boot-starter-oauth2-client")
 }
 
