--- a/server/sns-logins/build.gradle
+++ b/server/sns-logins/build.gradle
@@ -1,9 +1,10 @@
-
 apply from: "../web-common.gradle"
 
 dependencies {
-
     implementation("$boot:spring-boot-starter-oauth2-client")
 
+    runtime("com.h2database:h2")
+
+    compile project(":comp-user-admin")
 }
 
